--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <body>
     
     <!----Navber-->
-      <nav class="navbar navbar-dark bg-dark">
+    <div>
+      <img src="" alt="">
+    </div>
+      <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -18,10 +21,19 @@
         </div>
       </nav>
       <div class="collapse" id="navbarToggleExternalContent">
-        <div class="bg-dark p-4">
-          <ul class="navbar-nav">
-            <li class="nav-item text-light">
+        <div class="bg-light p-4">
+          <ul class="navbar-nav ">
+            <li class="nav-item text-drak">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+            <li class="nav-item text-drak">
+                <a class="nav-link active" aria-current="page" href="#">List your property</a>
+              </li>
+            <li class="nav-item text-drak">
+                <a class="nav-link active" aria-current="page" href="#">Wish Lists</a>
+              </li>
+            <li class="nav-item text-drak">
+                <a class="nav-link active" aria-current="page" href="#">My account</a>
               </li>
           </ul>
         </div>
