--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
               <li class="nav-item text-drak">
-                  <a class="nav-link active" aria-current="page" href="#top-destination">Top Destinions</a>
+                  <a class="nav-link active" aria-current="page" href="#top-destinations">Top Destinions</a>
                 </li>
               <li class="nav-item text-drak">
                   <a class="nav-link active" aria-current="page" href="#booking">Booking</a>
@@ -100,40 +100,62 @@
   <div class="courses">
    <h1 class="heading-titel">Top Destinations</h1>
   </div>
-   <div class="destination">
+   <div class="destination" id="top-destinations">
     <div class="row">
       <div class="col-6">
        <div class="row">
          <div class="col-6">
-           <div class="card">
-             <img src="image/Hilsha3.jpg"  class="img-fluid" alt="">
+           <div class="card image-wrapper">
+             <img class="zoom" src="image/Hilsha3.jpg"  class="img-fluid" alt="">
+             <div class="content fade">Located near the Mawa Ferry Ghat in Munshiganj, the restaurant has been creating buzz among the food enthusiasts and city dwellers.
+               People from surrounding areas have also been coming to the restaurant since it was recently launched
+              </div>
            </div>
          </div>
          <div class="col-6">
-           <div class="card">
-             <img src="image/Mowa gat.jpg" class="img-fluid" alt="">
+           <div class="card image-wrapper">
+             <img class="blur" src="image/Mowa gat.jpg" class="img-fluid" alt="">
+             <div class="content fade">
+              A large consignment of apparel products was shipped abroad from Mongla port for the first time on Thursday,
+               paving a new corridor for garment exports, as the opening of the Padma Bridge has enhanced the use of the country's second-largest port.
+             </div>
            </div>
          </div>
          <div class="col-12"> 
-           <div class="card">
-             <img src="image/Hisha2.jpg" class="img-fluid" alt="">
+           <div class="card image-wrapper">
+             <img class="zoom" src="image/Hisha2.jpg" class="img-fluid" alt="">
+             <div class="content fade">
+              Fried Ilish fish are sold in around 30 hotels in Shimulia Ghat. Although there is no data on exactly how many kilograms of Ilish is sold here everyday, 
+              the local hotel owners' association's secretary Masud Mia gave us an approximate. A cook frying Ilish fish, to be served fresh, at a local hotel in Shimulia Ferry Ghat.
+             </div>
            </div>
          </div>
        </div>
       </div>
       <div class="col-6">
-       <div class="caed ">
-         <img src="image/mela.jpg" class="img-fluid" alt="">
+       <div class="caed image-wrapper">
+         <img class="blur" src="image/mela.jpg" class="img-fluid" alt="">
+         <div class="content fade">
+          On a visit to the Mawa ghat area, the TBS correspondent saw the place is almost deserted while many launches and speed boats were seen waiting for passengers.
+          Now visitors throng to Mawa Ghat and on this occasion the grassroots people have saved thir livelihood here by selling small children's toys and selling eadtabls.
+         </div>
        </div>
       </div>
       <div class="col-6">
-       <div class="card">
-         <img src="image/Pddha bridg.jpg" class="img-fluid" alt="">
+       <div class="card image-wrapper">
+         <img class="blur" src="image/Pddha bridg.jpg" class="img-fluid" alt="">
+         <div class="content fade">
+          Considered to be the most challenging construction project in the history of Bangladesh, the steel truss bridge carries a four-lane highway on the upper level and a single track railway on the lower level.[6] The bridge consists of 41 sections,
+           each 150.12 m (492.5 ft) long and 22.5 m (74 ft) wide, with a total length of 6.15 km (3.82 mi).[5][7] It is the longest bridge in Bangladesh, the longest bridge over the river Ganges(Gaṅgā) by both span and total length, and features the highest pile depth of any bridge in the world at 120 m (390 ft).
+         </div>
        </div>
       </div>
       <div class="col-6">
-       <div>
-         <img src="image/sea.jpg" class="img-fluid" alt="">
+       <div class="card image-wrapper">
+         <img class="zoom" src="image/sea.jpg" class="img-fluid" alt="">
+         <div class="content fade">
+          The name Padma is given to the lower part of the course of the Ganges (Ganga) below the point of the off-take of the Bhagirathi River (India), another Ganges River distributary also known as the Hooghly River. Padma had, most probably, flowed through a number of channels at different times
+         </div>
        </div>
       </div>
     
@@ -191,7 +213,10 @@
     <article class="search-ber" id="back-to-search">
       <p>Start planning your dream holiday now!</p>
       <div class="col-sm-offset-3 col-sm-6 col-md-4">
-
+        <div class="container-fluid">
+          <input class="form-control me-2 bg-info" type="search" placeholder="Search" aria-label="Search">
+          
+        </div>
       </div>
     </article>
   </section>
