--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@
       <p>Start planning your dream holiday now!</p>
       <div class="col-sm-offset-3 col-sm-6 col-md-4">
         <div class="container-fluid">
-          <input class="form-control me-2 bg-info" type="search" placeholder="Search" aria-label="Search">
+          <div class="">
+
+          </div>
           
         </div>
       </div>
@@ -224,3 +226,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
+ck-to-search"
