--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="row">
       <div class="col-6">
        <div class="row">
-         <div class="col-6">
+         <div class="col-6 Hilsha-project">
            <div class="card image-wrapper">
              <img class="zoom" src="image/Hilsha3.jpg"  class="img-fluid" alt="">
              <div class="content fade">Located near the Mawa Ferry Ghat in Munshiganj, the restaurant has been creating buzz among the food enthusiasts and city dwellers.
@@ -112,7 +112,7 @@
               </div>
            </div>
          </div>
-         <div class="col-6">
+         <div class="col-6 Hilsha-project">
            <div class="card image-wrapper">
              <img class="blur" src="image/Mowa gat.jpg" class="img-fluid" alt="">
              <div class="content fade">
@@ -121,8 +121,8 @@
              </div>
            </div>
          </div>
-         <div class="col-12"> 
-           <div class="card image-wrapper">
+         <div class="col-12 Ilish-img"> 
+           <div class="card image-wrapper Hisha2">
              <img class="zoom" src="image/Hisha2.jpg" class="img-fluid" alt="">
              <div class="content fade">
               Fried Ilish fish are sold in around 30 hotels in Shimulia Ghat. Although there is no data on exactly how many kilograms of Ilish is sold here everyday, 
@@ -132,8 +132,8 @@
          </div>
        </div>
       </div>
-      <div class="col-6">
-       <div class="caed image-wrapper">
+      <div class="col-6 Ilish-img ">
+       <div class="caed image-wrapper elish-img">
          <img class="blur" src="image/mela.jpg" class="img-fluid" alt="">
          <div class="content fade">
           On a visit to the Mawa ghat area, the TBS correspondent saw the place is almost deserted while many launches and speed boats were seen waiting for passengers.
@@ -141,7 +141,7 @@
          </div>
        </div>
       </div>
-      <div class="col-6">
+      <div class="col-6 Ilish-img">
        <div class="card image-wrapper">
          <img class="blur" src="image/Pddha bridg.jpg" class="img-fluid" alt="">
          <div class="content fade">
@@ -150,9 +150,9 @@
          </div>
        </div>
       </div>
-      <div class="col-6">
+      <div class="col-6 Ilish-img">
        <div class="card image-wrapper">
-         <img class="zoom" src="image/sea.jpg" class="img-fluid" alt="">
+         <img class="zoom" src="image/Launch.jpg" class="img-fluid" alt="">
          <div class="content fade">
           The name Padma is given to the lower part of the course of the Ganges (Ganga) below the point of the off-take of the Bhagirathi River (India), another Ganges River distributary also known as the Hooghly River. Padma had, most probably, flowed through a number of channels at different times
          </div>
@@ -210,17 +210,18 @@
     </div>
   </section>
   <section class="container"> 
-    <article class="search-ber" id="back-to-search">
-      <p>Start planning your dream holiday now!</p>
-      <div class="col-sm-offset-3 col-sm-6 col-md-4">
-        <div class="container-fluid">
-          <div class="">
-
+      <div class="row">
+        <div class="col-md-12 col-sm-12 col-12">
+          <div class="text-center">
+            <p>Start planning your dream holiday now!</p>
+            <div class="">
+              <button class="btn search_btn">Serach <i class="fas fa-search"></i></button>
+            </div>
           </div>
-          
-        </div>
+        
       </div>
-    </article>
+      </div>
+   
   </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
