--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   <a class="nav-link active" aria-current="page" href="#booking">Booking</a>
                 </li>
               <li class="nav-item text-drak">
-                  <a class="nav-link active" aria-current="page" href="#"> Our contact</a>
+                  <a class="nav-link active" aria-current="page" href="#Our-contact"> Our contact</a>
                 </li>
             </ul>
           </div>
@@ -205,7 +205,7 @@
       </div>
     </div>
   </section>
-  <section class="footer-section">
+  <section class="footer-section" id="Our-contact">
     <footer class="footer">
         <div class="row align-items-center">
                <div class="footer-title d-flex">
