--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      
       <section >
         <nav class="navbar navbar-light bg-light ">
-          <div class=" d-flex">
+          <div class=" d-flex ms-auto">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
